Fix formatting on IE

--- a/client/src/extended_bootstrap_css/container-page.scss
+++ b/client/src/extended_bootstrap_css/container-page.scss
@@ -20,6 +20,7 @@
 .canada-logo {
   height: auto;
   max-height: 25px;
+  width: 100%;
 }
 @media(min-width: $minExtraSmallDevice){
   .canada-logo {
